--- a/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
+++ b/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
@@ -12,7 +12,7 @@ import { Link } from "vibe-storybook-components";
 import DialogContentContainer from "../../../components/DialogContentContainer/DialogContentContainer";
 import styles from "./dropdown-in-modals.module.scss";
 
-<Meta title="Technical Patterns/Display dropdowns inside pop-overs" />
+<Meta title="Technical Patterns/Dropdowns inside pop-overs" />
 
 <!--- Component documentation -->
 
