--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -505,7 +505,6 @@ We can set the triggers which will be responsible for hide the dialog
   </Story>
 </Canvas>
 
-
 ### Controlled Dialog
 
 Manage the open and close state of the dialog. Note that `isOpen` is used and `showTrigger` is set to `[]` to disable the default triggers.
@@ -521,24 +520,30 @@ Manage the open and close state of the dialog. Note that `isOpen` is used and `s
           content={
             <DialogContentContainer>
               <DialogContentContainer>
-                <Button
-                  kind={Button.kinds.SECONDARY}
-                  onClick={() => setIsOpen(false)}
-                >
+                <Button kind={Button.kinds.SECONDARY} onClick={() => setIsOpen(false)}>
                   This will close as well
                 </Button>
               </DialogContentContainer>
             </DialogContentContainer>
           }
         >
-          <Button onClick={() => setIsOpen(!isOpen)}>
-            Click me to toggle the Dialog
-          </Button>
+          <Button onClick={() => setIsOpen(!isOpen)}>Click me to toggle the Dialog</Button>
         </Dialog>
       );
     }}
   </Story>
 </Canvas>
+
+<Tip title="Devs tip">
+  If you wish to implement a dropdown inside a Dialog container and need help displaying the dropdown's popovers
+  correctly, read more about our dropdown in popovers technical pattern
+  <Link
+    href="?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
+    size={Link.sizes.SMALL}
+  >
+    here
+  </Link>.
+</Tip>
 
 ### Dialog prevent container scroll
 
