--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -695,6 +695,16 @@ component) or container with overflow hidden content.
 Use <b>insideOverflowWithTransformContainer</b> prop attribute for displaying drop down inside scrollable container which use CSS transform function (like our dialog component) or container
 with overflow hidden content which use CSS transform function.
 
+<Tip title="Devs tip">
+  For more details about dropdown's APIs for displaying correctly inside Dialogs, Modals and other popovers
+  <Link
+    href="?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
+    size={Link.sizes.SMALL}
+  >
+    press here
+  </Link>.
+</Tip>
+
 <Canvas>
   <Story name="Dropdown inside scrollable dialog">
     {() => {
