--- a/src/components/Badge/__stories__/Badge.stories.mdx
+++ b/src/components/Badge/__stories__/Badge.stories.mdx
@@ -64,7 +64,7 @@ Badge can be of type Indicator or type Counter
         </Badge>
       </StoryDescription>
       <StoryDescription description="Counter" vertical align={Flex.align.START}>
-        <Badge type={Badge.types.COUNTER}>
+        <Badge type={Badge.types.COUNTER} badgeProps={{ count: 100, maxDigits: 2 }}>
           <Button leftIcon={WhatsNew}>What's new</Button>
         </Badge>
       </StoryDescription>
@@ -139,15 +139,7 @@ We can set the position of the badge in any of the edges of its child component
       positive: {
         component: (
           <Badge outbound>
-            <div
-              style={{
-                border: "1px dashed var(--ui-border-color)",
-                borderLeftColor: "transparent",
-                borderBottomColor: "transparent"
-              }}
-            >
-              <Link text="Read more" />
-            </div>
+            <Link text="Read more" />
           </Badge>
         ),
         description: "When using the badge on an inline component, apply 'outbound' to it"
@@ -155,15 +147,7 @@ We can set the position of the badge in any of the edges of its child component
       negative: {
         component: (
           <Badge>
-            <div
-              style={{
-                border: "1px dashed var(--ui-border-color)",
-                borderLeftColor: "transparent",
-                borderBottomColor: "transparent"
-              }}
-            >
-              <Link text="Read more" />
-            </div>
+            <Link text="Read more" />
           </Badge>
         ),
         description: "Do not leave the indicator inside the element boundaries"
