--- a/src/components/List/__stories__/List.stories.mdx
+++ b/src/components/List/__stories__/List.stories.mdx
@@ -3,7 +3,7 @@ import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Board from "../../Icon/Icons/components/Board";
 import Team from "../../Icon/Icons/components/Team";
 import ThumbsUp from "../../Icon/Icons/components/ThumbsUp";
-import { useCallback } from "react";
+import { useCallback, useRef, useState } from "react";
 import ListItem from "../../ListItem/ListItem";
 import ListItemIcon from "../../ListItemIcon/ListItemIcon";
 import ListItemAvatar from "../../ListItemAvatar/ListItemAvatar";
@@ -95,6 +95,29 @@ Lists is a group of actionable items containing primary and supplemental actions
 </Tip>
 
 ## Variants
+
+### Test
+
+<Canvas>
+  <Story name="Test">
+    {() => {
+      const ref = useRef(null);
+      const [selectedItemIndex, setSelectedItemIndex] = useState(3);
+      const updateSelectedItem = index => {
+        setSelectedItemIndex(prevSelected => (prevSelected === index ? null : index));
+      };
+      return (
+        <List ref={ref} id={"test-list"}>
+          {[0, 1, 2, 3, 4, 5].map(index => (
+            <ListItem selected={selectedItemIndex === index} onClick={() => updateSelectedItem(index)}>
+              {`List item ${index}`}
+            </ListItem>
+          ))}
+        </List>
+      );
+    }}
+  </Story>
+</Canvas>
 
 ### List with categories
 
