--- a/src/components/SplitButton/__stories__/splitButton.stories.mdx
+++ b/src/components/SplitButton/__stories__/splitButton.stories.mdx
@@ -59,7 +59,7 @@ A split button is a dual-function menu button that offers a default action as we
     args={{
       children: "Button",
       secondaryDialogContent: () => (
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -104,7 +104,7 @@ The split button has three variants: primary, secondary, and tertiary.
     <SplitButton
       children="Primary"
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -114,7 +114,7 @@ The split button has three variants: primary, secondary, and tertiary.
       children="Secondary"
       kind={SplitButton.kinds.SECONDARY}
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -124,7 +124,7 @@ The split button has three variants: primary, secondary, and tertiary.
       children="Tertiary"
       kind={SplitButton.kinds.TERTIARY}
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -143,7 +143,7 @@ The split button has supports multiple sizes: small, medium and large.
       children="Small"
       size={SplitButton.sizes.SMALL}
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -153,7 +153,7 @@ The split button has supports multiple sizes: small, medium and large.
       children="Medium"
       size={SplitButton.sizes.MEDIUM}
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -163,7 +163,7 @@ The split button has supports multiple sizes: small, medium and large.
       children="Large"
       size={SplitButton.sizes.LARGE}
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -179,7 +179,7 @@ The split button has supports multiple sizes: small, medium and large.
     <SplitButton
       leftIcon={Add}
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -190,7 +190,7 @@ The split button has supports multiple sizes: small, medium and large.
     <SplitButton
       rightIcon={Add}
       secondaryDialogContent={
-        <SplitButtonMenu>
+        <SplitButtonMenu id="split-menu">
           <MenuItem icon={Check} title="Hey" />
           <MenuItem icon={Announcement} title="There" />
         </SplitButtonMenu>
@@ -310,7 +310,7 @@ Use template is the main action.
     {() => {
       const secondaryDialogContent = useMemo(
         () => (
-          <SplitButtonMenu>
+          <SplitButtonMenu id="split-menu">
             <MenuItem icon={Download} title="Import template" />
             <MenuItem icon={Upload} title="Export template" />
           </SplitButtonMenu>
@@ -337,7 +337,7 @@ When there’s already a primary button in the view, use a secondary split butto
     {() => {
       const secondaryDialogContent = useMemo(
         () => (
-          <SplitButtonMenu>
+          <SplitButtonMenu id="split-menu">
             <MenuItem title="Export to PDF" />
             <MenuItem title="Export to DOCX" />
             <MenuItem title="Export to Excel" />
