docs(AttentionBox): fix headline naming

--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -260,7 +260,7 @@ There are five types of attention boxes: Primary, success, danger, warning and d
 
 ## Use cases and examples
 
-### Natural attention box
+### Natural Attention box
 
 Provides additional information about an action or section.
 
